--- a/Table_Fixed_Header/css/main.css
+++ b/Table_Fixed_Header/css/main.css
@@ -235,7 +235,7 @@ th, td {
   color: #fff;
   line-height: 1.4;
 
-  background-color: #6c7ae0;
+  background-color: #4e73df;
 }
 
 .table100.ver1 td {
